# ms_vvr

./: .gitignore  .gitmodules  Build.bat  Build_shared.bat  CMakeLists.txt  LICENSE  README.md  submodule_update.bat
resources/: ca.cer  ca.csr  ca.srl  cacert.pem  cakey.pem  client-key.pem  client.csr  clientCert.pem
src/: common-def.h  dllmain.cpp  log.cpp  log.h  main.cpp  module-singleton.h  ms-vvr.h  ssml-creator.cpp  ssml-creator.h  utilities.h  websocket.cpp  websocket.h
